@@ -1,6 +1,12 @@
 2015-10-31  Natalia Portillo  <claunia@claunia.com>
 
 	* SCSI/Modes.cs:
+	  Implemented Mode Page 0x1B: Removable Block Access
+	  Capabilities page.
+
+2015-10-31  Natalia Portillo  <claunia@claunia.com>
+
+	* SCSI/Modes.cs:
 	  Added information from ANSI X3.304-1997 (MMC-1).
 
 2015-10-31  Natalia Portillo  <claunia@claunia.com>
